// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Title matches the snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Title
    classes={
      Object {
        "h1": "h1",
        "h2": "h2",
        "h3": "h3",
        "h4": "h4",
        "title": "title",
      }
    }
    h={1}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": undefined,
      "className": "title h1",
      "id": undefined,
      "style": undefined,
    },
    "ref": null,
    "rendered": null,
    "type": "h1",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": undefined,
        "className": "title h1",
        "id": undefined,
        "style": undefined,
      },
      "ref": null,
      "rendered": null,
      "type": "h1",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Title styles matches the snapshot 1`] = `
Object {
  "h1": Object {
    "fontSize": "22px",
  },
  "h2": Object {
    "fontSize": "20px",
  },
  "h3": Object {
    "fontSize": "18px",
  },
  "h4": Object {
    "fontSize": "15px",
  },
  "title": Object {
    "boxSizing": "border-box",
    "color": "#3e5466",
    "fontFamily": "'Nunito Sans', sans-serif",
    "fontWeight": "600",
    "lineHeight": "1.1",
    "marginBottom": "15px",
    "marginTop": "20px",
  },
}
`;

exports[`TitleJSS matches the snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Jss(Title)
    h={1}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "classes": Object {
        "h1": "Title-h1-0-1-2",
        "h2": "Title-h2-0-1-3",
        "h3": "Title-h3-0-1-4",
        "h4": "Title-h4-0-1-5",
        "title": "Title-title-0-1-1",
      },
      "h": 1,
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "classes": Object {
          "h1": "Title-h1-0-1-2",
          "h2": "Title-h2-0-1-3",
          "h3": "Title-h3-0-1-4",
          "h4": "Title-h4-0-1-5",
          "title": "Title-title-0-1-1",
        },
        "h": 1,
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
